 - JEL performance improvements (prevent most NullPointerExceptions)
 - SubsetWindow counting performance improvements (limit progressbar updates)
 - Improved updating of viewed table when other cells are changed
 - Null handling improved for FITS and VOTable/FITS output formats
 - Improved window resizing for some dialogue boxes
 - Improved error messages from synthetic subset/column expression entry
 - Synthetic column expressions now written out into column descriptions
 - Can add/remove table parameters
 - One-step column replacement dialogue from data window or column window
 - Fixed bug in text handler for sexagesimal angles with -0 degrees/hours
 - Changed row subset #ID to _ID
 - New Control Window action in File menu of all windows
 - New match types (anisotropic Cartesian, Sky+X, Sky+XY)
 - FITS files can now store column descriptions in (non-standard) TCOMMx headers
 - MethodWindow now displays calculation methods and activation methods separate
 - Full documentation in MethodWindow of all available functions
 - Full documentation in SUN/253 of all available functions
 - Can now input match errors in arcsec, arcmin, degrees as well as radians
 - Can now select units (radians/degrees) for angle match columns 
 - Changed the names of the properties used by JELUtils.
 - More improvements to pair matching efficiency.
 - FITS-plus handler
 - Activation string serialized to output table (VOTable PARAM).
 - VOTable processing improvements (full VOTable 1.1 compatibility, J2SE1.5).
 - Added comma-separated value input and output handlers.
 - Can now optionally specify input format (command line or load window).
 - Improved rendering of numbers in data window (esp. Floats)
 - Improved column width detection in data window.
 - RA/Dec columns once specified are used elsewhere.
 - Simple (non-JAI,SoG) image display for GIF, JPEG, PNG, FITS files.
 - ASCII input handler no longer works in auto-detect mode.